<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.cprn</groupId>
	<artifactId>cprn-xml-validator-app</artifactId>
	<version>1.0.2</version>
	<packaging>jlink</packaging>
	<name>CPRN XML Validation Application</name>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.scm.id>github</project.scm.id>
	    <maven.javadoc.skip>true</maven.javadoc.skip>
	</properties>
	
	<repositories>
		<repository>
			<id>maven.github.blair</id>
			<name>Blair Cooper repositories on Github</name>
			<url>https://maven.pkg.github.com/BlairCooper/cprn-java-libary/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub BlairCooper Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/BlairCooper/${project.artifactId}</url>
		</repository>
	</distributionManagement>
	
	<scm>
		<developerConnection>scm:git:https://github.com/BlairCooper/${project.artifactId}.git</developerConnection>
	  <tag>cprn-xml-validator-app-1.0.2</tag>
  </scm>

	<dependencies>
		<dependency>
			<groupId>org.cprn</groupId>
			<artifactId>cprn-java-library</artifactId>
			<version>1.0.14</version>
		</dependency>
		<dependency>
			<groupId>org.cprn</groupId>
			<artifactId>cprn-xml-validator</artifactId>
			<version>1.0.8</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>		
			<plugin>
		    	<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.cprn.validator.app.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jlink-plugin</artifactId>
				<version>3.1.0</version>
				<extensions>true</extensions>
				<configuration>
					<launcher>cprnValidateXml=cprn.xml.validator.app/org.cprn.validator.app.Main</launcher>
					<launcherTemplateScript>cprnValidateXml</launcherTemplateScript>
					<mainModule>cprn.xml.validator.app</mainModule>
					<mainClass>org.cprn.validator.app.Main</mainClass>
					<noHeaderFiles>true</noHeaderFiles>
					<noManPages>true</noManPages>
					<verbose>true</verbose>
				</configuration>
			</plugin>
 			<plugin>
				<groupId>org.panteleyev</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<version>1.5.0</version>

				<configuration>
					<name>CPRN XML Validator</name>
					<appVersion>${project.version}</appVersion>
					<vendor>cprn.org</vendor>
					<module>cprn.xml.validator.app/org.cprn.validator.app.Main</module>
					<destination>target/dist</destination>
					<runtimeImage>target/maven-jlink/default</runtimeImage>
					<javaOptions>
						<option>--enable-preview</option>
						<option>-Dfile.encoding=UTF-8</option>
					</javaOptions>
				</configuration>

				<executions>
					<execution>
						<id>macos-latestc</id>
						<configuration>
							<icon>icons/cprn.icns</icon>
						</configuration>
					</execution>
					<execution>
						<id>windows-latest</id>
						<configuration>
							<icon>icons/cprn.ico</icon>
							<launcher.file>target/maven-jlink/default/bin/cprnValidateXml.bat</launcher.file>
							<winMenu>true</winMenu>
							<winConsole>true</winConsole>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>